[package]
name = "examples-rust"
version = "0.1.0"
authors = ["Fabio Schorn" <fabio.schorn@expertsonline.com.br>]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "examples-rust",
]

[dependencies]
