[package]
name = "examples-rust"
version = "0.1.0"
authors = ["Fabio Schorn <fabio.schorn@expertsonline.com.br>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
cortex-m = "0.7.7"
embedded-hal = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"